--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arrow-ts/core",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "core components of Arrow-Ts",
   "author": "Pasindu Senanayakege",
   "license": "MIT",
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "remote-publish": "tsc && cp package.json dist && cp README.md dist && cd dist && npm pack",
+    "remote-publish": "tsc && cp package.json dist && cp README.md dist && cp LICENSE.md dist && cd dist && npm publish",
     "test": "jest"
   },
   "repository": {
