--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arrow-ts/core",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "core components of Arrow-Ts",
   "author": "Pasindu Senanayakege",
   "license": "MIT",
@@ -28,5 +28,11 @@
     "ts-jest": "^29.2.6",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
-  }
+  },
+  "keywords":[
+    "either",
+    "typed errors",
+    "monads",
+    "functional programming"
+  ]
 }
